--- a/source/sass/blocks/internet-vote.scss
+++ b/source/sass/blocks/internet-vote.scss
@@ -284,6 +284,8 @@
 
   @include mobile {
     flex-direction: column;
+
+    padding-left: 32px;
   }
 }
 
@@ -293,6 +295,7 @@
 
   @include mobile {
     max-width: 90%;
+    margin-left: 28px;
   }
 }
 
@@ -308,15 +311,16 @@
 }
 
 .internet-vote__error-btn {
-  padding: 15px;
+  margin-left: 10px;
+  padding: 26px;
   padding-top: 13px;
-  padding-bottom: 17px;
-
-  min-width: 280px;
-  height: 44px;
+  padding-bottom: 11px;
 
   @include mobile {
+    margin-left: 0;
     margin-top: 20px;
+    padding-left: 15px;
+    padding-right: 15px;
     min-width: auto;
     height: auto;
   }
