Возвращает уменьшение шрифта плейсхолдера на .internet-vote__search

--- a/source/sass/blocks/internet-vote.scss
+++ b/source/sass/blocks/internet-vote.scss
@@ -158,6 +158,10 @@
 
   box-sizing: border-box;
 
+  &::placeholder {
+    font-size: inherit;
+  }
+
   @include mobile {
     font-size: 11px;
   }
