--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -115,6 +115,10 @@
 @import 'blocks/projects-winners';
 @import 'blocks/internet-vote';
 @import 'blocks/internet-banner';
+@import 'blocks/link-list';
+@import 'blocks/page-status';
+@import 'blocks/direct-line-form';
+@import 'blocks/direct-line-section';
 
 // main page
 @import "blocks/news-notice";
