--- a/source/sass/blocks/direct-line-section.scss
+++ b/source/sass/blocks/direct-line-section.scss
@@ -1,5 +1,16 @@
 .direct-line-section {
   padding-top: 72px;
+  text-align: center;
+
+  &__button {
+    margin: 0 auto;
+    padding: 18px 58px 16px;
+
+    @media (max-width: $tablet-width - 1) {
+      margin: 0 0 32px;
+      padding: 18px 20px 16px 38px;
+    }
+  }
 
   .section__head {
     display: flex;
@@ -12,15 +23,30 @@
     }
   }
 
+  .concurrent-projects__title {
+    margin-bottom: 0;
+
+    @media (max-width: $desktop-width - 1) {
+      margin-bottom: 0;
+    }
+
+    @media (max-width: $tablet-width - 1) {
+      margin-bottom: 0;
+    }
+  }
+
   .concurrent-projects__status-wrapper {
     margin-bottom: 11px;
   }
 
+  .date {
+    margin-right: 12px;
+  }
   .project-status {
-    padding-left: 21px;
+    //padding-left: 21px;
 
-    &:before {
-      left: 12px;
-    }
+    //&:before {
+    //  left: 12px;
+    //}
   }
 }
