--- a/source/sass/blocks/link-list.scss
+++ b/source/sass/blocks/link-list.scss
@@ -1,5 +1,5 @@
 .links-list {
-  background: $color-bg;
+  background: var(--color-bg-secondary, $color-bg);
   border-radius: 5px;
   padding: 32px;
   margin-bottom: 54px;
@@ -8,7 +8,7 @@
     font-weight: normal;
     font-size: rem(24px);
     line-height: rem(28px);
-    color: $dark-text;
+    color: var(--color-text, $dark-text);
     padding: 0;
     margin: 0;
     margin-bottom: 24px;
