--- a/source/sass/blocks/notification-block.scss
+++ b/source/sass/blocks/notification-block.scss
@@ -26,8 +26,8 @@
 
   &__text {
     font-weight: 500;
-    font-size: 16px;
-    line-height: 22px;
+    font-size: rem(16px);
+    line-height: rem(22px);
     color: $dark-text;
     padding: 0;
     margin: 0 12px;
