--- a/source/sass/blocks/project-page.scss
+++ b/source/sass/blocks/project-page.scss
@@ -25,7 +25,7 @@
 }
 
 .project-page__budget-co-financing .project-page__budget-value {
-  font-size: 24px;
+  font-size: rem(24px);
   font-weight: 400;
   line-height: 28px;
   color: var(--color-text, $grey);
@@ -67,8 +67,8 @@
   padding: 0;
 
   font-family: inherit;
-  font-size: 18px;
-  line-height: 23px;
+  font-size: rem(18px);
+  line-height: rem(23px);
   font-weight: 400;
   letter-spacing: 0;
   color: var(--color-text, $dark-text);
@@ -90,8 +90,8 @@
 
 .project-page__contacts-label,
 .project-page__contacts-info {
-  font-size: 13px;
-  line-height: 17px;
+  font-size: rem(13px);
+  line-height: rem(17px);
   font-weight: 400;
   letter-spacing: 0;
   color: var(--color-text, $grey-lighter);
@@ -104,8 +104,8 @@
   padding: 0;
   text-decoration: none;
 
-  font-size: 16px;
-  line-height: 22px;
+  font-size: rem(16px);
+  line-height: rem(22px);
   font-weight: 400;
   letter-spacing: 0;
   color: var(--color-text,  $dark-text);
@@ -124,8 +124,8 @@
 }
 
 .project-page__result-info {
-  font-size: 13px;
-  line-height: 17px;
+  font-size: rem(13px);
+  line-height: rem(17px);
   font-weight: 400;
   letter-spacing: 0;
   color: var(--color-text,  $grey-lighter);
@@ -196,7 +196,7 @@
   padding-left: 45px;
   padding-right: 45px;
   margin-top: 0;
-  font-size: 15px;
+  font-size: rem(15px);
 }
 
 @include desktop-only {
@@ -376,8 +376,8 @@
   margin-bottom: 48px;
 
   font-family: inherit;
-  font-size: 16px;
-  line-height: 22px;
+  font-size: rem(16px);
+  line-height: rem(22px);
   font-weight: 400;
   letter-spacing: 0;
   color: var(--color-text,  $dark-text);
@@ -482,7 +482,7 @@
     }
 
     .project-meta__category {
-      font-size: 18px;
+      font-size: rem(18px);
       padding-left: 21px;
       padding-bottom: 15px;
     }
@@ -608,14 +608,14 @@
     }
 
     .info-banner__text {
-      font-size: 15px;
-      line-height: 20px;
+      font-size: rem(15px);
+      line-height: rem(20px);
     }
 
     .content h1:not([class]) {
       margin-bottom: 25px;
-      font-size: 24px;
-      line-height: 28px;
+      font-size: rem(24px);
+      line-height: rem(28px);
     }
 
     .project-meta {
@@ -624,7 +624,7 @@
 
     .project-meta__category {
       padding-left: 15px;
-      font-size: 16px;
+      font-size: rem(16px);
     }
 
     .project-meta__category-link {
@@ -677,7 +677,7 @@
     .content h2:not([class]) {
       margin-top: 35px;
       margin-bottom: 18px;
-      font-size: 24px;
+      font-size: rem(24px);
     }
 
     .project-page__address {
