--- a/source/sass/blocks/status-info.scss
+++ b/source/sass/blocks/status-info.scss
@@ -42,6 +42,7 @@
   font-weight: 500;
   font-size: rem(16px);
   line-height: rem(22px);
+  margin-top: 2px;
 
   &--small {
     font-weight: normal;
