Fixex and updates for form

--- a/source/sass/blocks/description-block.scss
+++ b/source/sass/blocks/description-block.scss
@@ -78,8 +78,7 @@
   }
 }
 
-.description-block__textarea-error,
-.input-error {
+.description-block__textarea-error {
   display: none;
   position: absolute;
   bottom: -20px;
