--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -119,6 +119,7 @@
 @import 'blocks/page-status';
 @import 'blocks/direct-line-form';
 @import 'blocks/direct-line-section';
+@import 'blocks/info-item';
 
 // main page
 @import "blocks/news-notice";
