--- a/source/sass/blocks/direct-line-section.scss
+++ b/source/sass/blocks/direct-line-section.scss
@@ -1,6 +1,4 @@
 .direct-line-section {
-  text-align: center;
-
   &__button {
     margin: 0 auto;
     padding: 18px 58px 16px;
@@ -9,6 +7,11 @@
       margin: 0 0 32px;
       padding: 18px 20px 16px 38px;
     }
+  }
+
+  .container {
+    display: flex;
+    flex-direction: column;
   }
 
   .section__head {
@@ -20,6 +23,8 @@
     .section__title-wrap {
       align-items: center;
       margin-bottom: 12px;
+      width: 100%;
+      max-width: unset;
     }
   }
 
