--- a/source/sass/blocks/link-list.scss
+++ b/source/sass/blocks/link-list.scss
@@ -1,8 +1,9 @@
 .links-list {
+  $b: #{&};
   background: var(--color-bg-secondary, $color-bg);
   border-radius: 5px;
   padding: 32px;
-  margin-bottom: 54px;
+  margin-bottom: 24px;
 
   &__title {
     font-weight: normal;
@@ -22,8 +23,46 @@
     margin-bottom: 20px;
   }
 
+  &__sub {
+    font-style: italic;
+    font-weight: 400;
+    font-size: rem(16px);
+    line-height: 135%;
+    color: var(--color-text, $dark-text);
+    padding: 0;
+    margin: 0;
+    margin-top: 33px;
+  }
+
   .article-link {
     margin-bottom: 0;
+  }
+
+  .info-item {
+    padding-left: 14px;
+    position: relative;
+
+    &:after {
+      content: "";
+      position: absolute;
+      display: block;
+      top: 8px;
+      left: 0;
+      width: 6px;
+      height: 6px;
+      border-radius: 50%;
+      background-color: var(--color-text, $grey);
+    }
+  }
+
+  &--info {
+    #{$b}__title {
+      margin-bottom: 33px;
+    }
+
+    #{$b}__item:not(:last-child) {
+      margin-bottom: 12px;
+    }
   }
 
   //&__link {
