--- a/source/sass/blocks/new-project.scss
+++ b/source/sass/blocks/new-project.scss
@@ -120,6 +120,7 @@
 
 .new-project__file-upload {
   margin: 0 0 80px;
+  position: relative;
 
   @media (max-width: $tablet-width - 1) {
     margin-bottom: 72px;
@@ -135,6 +136,7 @@
 }
 
 .new-project__image-upload {
+  position: relative;
   margin-bottom: 47px;
   padding-bottom: 48px;
   border-bottom: 1px solid var(--color-stroke, $light-grey);
