Fix for page-status color

--- a/source/sass/blocks/page-status.scss
+++ b/source/sass/blocks/page-status.scss
@@ -13,7 +13,7 @@
   span {
     font-weight: normal;
     text-decoration: none;
-    color: var(--color-text, $blue-default);
+    color: var(--color-text, $grey-default);
     position: relative;
     margin-left: 23px;
     @include status-colors;
