--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -33,6 +33,7 @@ $comfort: #4d4b43;
 $light-yellow: #f7f3d8;
 $brown: #3b2717;
 $fill-color: rgba(155, 210, 244, 0.25);
+$pattens-blue: #dcdee0;
 
 $retina2x-dpi: 144dpi;
 $retina2x-dppx: 1.5dppx;
