Добавляет страницу Форма создания предложения 6-7 с вариантом галереи внутри проекта с кнопкой для голосования вместо лайка

--- a/source/sass/blocks/project-vote.scss
+++ b/source/sass/blocks/project-vote.scss
@@ -218,6 +218,18 @@
 }
 
 .project-vote__like-counter {
+  p {
+    font-size: 13px;
+    line-height: 16.9px;
+    color: $grey;
+  }
+
+  button {
+    width: 100%;
+  }
+}
+
+.project-vote__like-counter {
   width: 100%;
   margin-top: 24px;
   padding-top: 25px;
