--- a/source/sass/blocks/proposal.scss
+++ b/source/sass/blocks/proposal.scss
@@ -673,14 +673,6 @@
   }
 }
 
-// .proposal__project-2 .gallery__item-link,
-// .proposal__project-2 .gallery__item {
-//   //margin-right: 15px;
-//   //width: 129px;
-//   width: 129px;
-//   height: 129px;
-// }
-
 .proposal__project-details {
   //margin-top: 32px;
   //margin-left: 28px;
@@ -705,30 +697,27 @@
   height: 129px;
 }
 
-.proposal__project-2 .swiper-slide {
+.proposal__project .swiper-slide {
   margin-right: 15px;
   width: 129px;
   height: 129px;
 }
 
-.proposal__project--open {
+.proposal__project {
+  .proposal__gallery {
+    padding-left: 28px;
+  }
   .proposal__project-details {
     margin-top: 32px;
     margin-left: 28px;
 
     svg {
-      transform: rotate(180deg);
+      transform: rotate(-180deg);
     }
-  }
-
-  .proposal__gallery {
-    padding-left: 28px;
   }
 }
 
-.proposal__project-1,
-.proposal__project-2,
-.proposal__project-3 {
+.proposal__project {
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
@@ -737,9 +726,62 @@
   margin-bottom: 32px;
 
   button {
-    margin-left: 28px;
     margin-top: 32px;
     align-self: start;
+    display: block;
+  }
+
+  .proposal-list__like-counter {
+    margin-top: 32px;
+    display: flex;
+    align-items: center;
+
+    span {
+      margin-bottom: 17px;
+      font-size: 18px;
+      line-height: 23.4px;
+      font-weight: 400;
+      color: $dark-text;
+    }
+  }
+
+  .button-details {
+    padding: 0;
+    cursor: pointer;
+    border: none;
+    outline: none;
+    background-color: transparent;
+    margin-left: 0;
+
+    &__text {
+      margin-right: 9px;
+
+      &_opened {
+        display: none;
+      }
+
+      &_closed {
+        display: inline-block;
+      }
+    }
+
+    .button-details__icon {
+      transform: rotate(0deg);
+    }
+
+    &.opened {
+      .button-details__text_opened {
+        display: inline-block;
+      }
+
+      .button-details__text_closed {
+        display: none;
+      }
+
+      .button-details__icon {
+        transform: rotate(180deg);
+      }
+    }
   }
 }
 
