--- a/source/sass/blocks/form-checkbox.scss
+++ b/source/sass/blocks/form-checkbox.scss
@@ -100,3 +100,14 @@
     }
   }
 }
+
+.form-checkbox--white input[type="checkbox"]:checked ~ label{
+  &::before {
+    background-color: $white;
+    border: 1px solid $blue-accent;
+  }
+  &::after {
+    display: block;
+    background-image: url("../img/icon-tick.svg");
+  }
+}
