--- a/source/sass/blocks/project-vote.scss
+++ b/source/sass/blocks/project-vote.scss
@@ -421,17 +421,39 @@
 }
 
 .project-vote__like-counter {
-  .proposal-list__like-counter {
-    margin-left: 0;
+  margin-left: 0;
+}
 
-    span {
-      margin-bottom: 17px;
-      font-size: 15px;
-      line-height: 20.25px;
-      font-weight: 400;
-      color: $blue-default;
-      padding-bottom: 2px;
-      border-bottom: 1px dashed $blue-default;
-    }
+.project-vote__like-counter .form-checkbox {
+  margin-bottom: 0;
+}
+
+.project-vote__rezult {
+  //margin-bottom: 17px;
+  font-size: 15px;
+  line-height: 20.25px;
+  font-weight: 400;
+  color: $blue-default;
+  padding-bottom: 2px;
+  border-bottom: 1px dashed $blue-default;
+}
+
+.project-vote__like-wrapper {
+  margin-top: 12px;
+  display: flex;
+  align-items: center;
+
+  span {
+    //margin-bottom: 17px;
+    font-size: 18px;
+    line-height: 23.4px;
+    font-weight: 400;
+    color: $dark-text;
+    color: $blue-default;
+    border-bottom: 1px dashed $blue-default;
+  }
+
+  .form-checkbox {
+    margin-bottom: 0;
   }
 }
