Вносит изменения в разметку страницы с табами, активирует табы

--- a/source/sass/blocks/info-banner.scss
+++ b/source/sass/blocks/info-banner.scss
@@ -79,6 +79,7 @@
     }
   }
 
+  //кнопка свернуть-развернуть
   &__button {
     z-index: 1;
   }
@@ -114,6 +115,7 @@
       }
     }
 
+    //span внутри кнопки
     .info-banner__text {
       height: 3.4rem;
 
