--- a/source/sass/blocks/proposal.scss
+++ b/source/sass/blocks/proposal.scss
@@ -785,17 +785,28 @@
   padding-bottom: 32px;
   border-bottom: 1px solid $light-grey;
   margin-bottom: 32px;
+  position: relative;
 
-  button {
+  .proposal__gallery {
+    display: none;
+    &.opened {
+      display: block;
+    }
+  }
+
+  .button--blue {
     margin-top: 32px;
     align-self: start;
     display: block;
+    //display: none;
   }
 
+  //чекбокс выбранного проекта
   .proposal-list__like-counter {
     margin-top: 32px;
     display: flex;
     align-items: center;
+    display: none;
 
     span {
       font-size: 18px;
@@ -820,6 +831,44 @@
 
     .button-details {
       display: none;
+    }
+  }
+
+  .proposal__project-text {
+    height: 2.6em;
+    height: 4.5em;
+    margin-bottom: 14px;
+
+    @media (max-width: $mobile-max-width) {
+      height: 8em;
+      margin-bottom: 9px;
+    }
+
+    &.opened {
+      height: auto;
+
+      &:after {
+        display: none;
+      }
+    }
+
+    &:after {
+      position: absolute;
+      bottom: -0.4rem;
+      left: 0;
+
+      width: 100%;
+      height: 2rem;
+
+      background: linear-gradient(
+        to bottom,
+        rgba(255, 255, 255, 0),
+        var(--color-bg-secondary, $color-bg) 100%
+      );
+
+      text-align: right;
+
+      content: '';
     }
   }
 
@@ -887,13 +936,22 @@
 
   //кнопка подробнее-свернуть
   .button-details {
+    //position: absolute;
+    margin-left: 30px;
+    align-self: start;
+    display: block;
     padding: 0;
     cursor: pointer;
     border: none;
     outline: none;
     background-color: transparent;
-    margin-left: 0;
+    //margin-left: 0;
     z-index: 1;
+    position: absolute;
+    bottom: 30px;
+    //bottom: 0;
+    //bottom: -30px;
+    //left: 30px;
 
     &__text {
       margin-right: 9px;
@@ -912,6 +970,7 @@
     }
 
     &.opened {
+      position: unset;
       .button-details__text_opened {
         display: inline-block;
       }
