Исправляет часть багов после 1го тестирования

--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -97,6 +97,11 @@
       color: $light-grey;
     }
   }
+
+  &--update {
+    font-size: 15px;
+    line-height: 20.25px;
+  }
 }
 
 @media print {
