--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -41,3 +41,5 @@ $retina2x-dppx: 1.5dppx;
 $border-radius: 5px;
 $style-change-duration: 0.2s;
 $style-change-duration-slow: 0.4s;
+
+$trans--300: 0.3s;
