--- a/source/sass/blocks/proposal.scss
+++ b/source/sass/blocks/proposal.scss
@@ -1151,6 +1151,25 @@
   }
 }
 
+// .proposal__project {
+//   &.opened {
+//     &:before {
+//       content: "";
+//       display: block;
+//       position: absolute;
+//       width: 2px;
+//       height: 483px;
+//       background-color: $blue-default;
+//       top: 30px;
+//       left: 10px;
+//     }
+//   }
+// }
+
+.proposal__projects {
+  grid-area: f;
+}
+
 .proposal__project--opened {
   &:before {
     content: "";
