Скрывает временно синюю линию у открытых проектов, возвращает прежний лайк на страницу impovemnet-list-var3 где чекбокс вместе с лайком

--- a/source/sass/blocks/proposal.scss
+++ b/source/sass/blocks/proposal.scss
@@ -1170,15 +1170,21 @@
   grid-area: f;
 }
 
-.proposal__project--opened {
-  &:before {
-    content: "";
-    display: block;
-    position: absolute;
-    width: 2px;
-    height: 483px;
-    background-color: $blue-default;
-    top: 30px;
-    left: 10px;
-  }
+// .proposal__project--opened {
+//   &:before {
+//     content: "";
+//     display: block;
+//     position: absolute;
+//     width: 2px;
+//     height: 483px;
+//     background-color: $blue-default;
+//     top: 30px;
+//     left: 10px;
+//   }
+// }
+
+.proposal__like-wrapper {
+  display: flex;
+  align-items: center;
+  display: none;
 }
